--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:label="@string/app_name"
-        android:theme="@style/Base.Theme.Project"
+        android:theme="@style/Theme.App.Starting"
         tools:targetApi="tiramisu">
         <activity
             android:name=".MainActivity"
