--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,11 @@ lifecycle = "2.6.2"
 testJunit = "4.13.2"
 testAndroidxJunit = "1.1.5"
 testAndroidxEspresso = "3.5.1"
+testMockitoCore = "5.7.0"
+testMockitoKotlin = "5.1.0"
+testTurbine = "1.0.0"
+testTruth = "1.5.0"
+
 
 eonad = "1.0.8"
 paging = "3.2.1"
@@ -45,9 +50,16 @@ immutableCollections = "0.3.5"
 
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 
-junit = { module = "junit:junit", version.ref = "testJunit" }
-androidx-junit = { module = "androidx.test.ext:junit", version.ref = "testAndroidxJunit" }
-androidx-espresso = { module = "androidx.test.espresso:espresso-core", version.ref = "testAndroidxEspresso" }
+test-androidx-junit = { module = "androidx.test.ext:junit", version.ref = "testAndroidxJunit" }
+test-androidx-espresso = { module = "androidx.test.espresso:espresso-core", version.ref = "testAndroidxEspresso" }
+test-androidx-truth = { module = "androidx.test.ext:truth", version.ref = "testTruth" }
+test-junit = { module = "junit:junit", version.ref = "testJunit" }
+test-mockito-core = { module = "org.mockito:mockito-core", version.ref = "testMockitoCore" }
+test-mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "testMockitoKotlin" }
+test-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
+test-turbine = { module = "app.cash.turbine:turbine", version.ref = "testTurbine" }
+test-paging = { module = "androidx.paging:paging-testing", version.ref = "paging"}
+
 
 material = { module = "com.google.android.material:material", version.ref = "material"}
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat"}
@@ -60,6 +72,7 @@ androidx-navigation-fragment = { module = "androidx.navigation:navigation-fragme
 androidx-palette = { module = "androidx.palette:palette-ktx", version.ref = "palette"}
 androidx-splash = { module = "androidx.core:core-splashscreen", version.ref = "splash"}
 androidx-paging = { module = "androidx.paging:paging-runtime-ktx", version.ref = "paging"}
+androidx-paging-common = { module = "androidx.paging:paging-common", version.ref = "paging"}
 
 lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle" }
 lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
@@ -141,6 +154,17 @@ room = [
 firebase-appcheck = [
     "firebase-appcheck",
     "firebase-appcheck-playintegrity"
+]
+test = [
+    "test-junit",
+    "test-turbine",
+    "test-mockito-core",
+    "test-mockito-kotlin",
+    "test-coroutines",
+    "test-androidx-junit",
+    "test-androidx-espresso",
+    "test-androidx-truth",
+    "test-paging"
 ]
 
 [plugins]
